Правки под Github